--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: My Dev Blog
+title: Tommy's Dev Blog
 email: tommy@ambitiousnerds.com
 description: >- # this means to ignore newlines until "baseurl:"
   The dev blog of a software developer working in Javascript, Angular,
   C#, Swift, and .NET Core. Will also contain random other musings.
 twitter_username: djfriar
 github_username: djfriar
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dark
 search: true
 
 # Build settings
